Création d'un template Master/Details
Création des modèles de repas et allergies
Conception de la page de détails.

--- a/Mobile/app/src/main/AndroidManifest.xml
+++ b/Mobile/app/src/main/AndroidManifest.xml
@@ -15,6 +15,24 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MealListActivity"
+            android:label="@string/title_meal_list"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.usager.mobile.MainActivity" />
+        </activity>
+        <activity
+            android:name=".MealDetailActivity"
+            android:label="@string/title_meal_detail"
+            android:parentActivityName=".MealListActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.usager.mobile.MealListActivity" />
+        </activity>
     </application>
 
 </manifest>
