--- a/Mobile/app/src/main/AndroidManifest.xml
+++ b/Mobile/app/src/main/AndroidManifest.xml
@@ -22,11 +22,13 @@
         <activity
             android:name=".LoginActivity"
             android:theme="@style/AppTheme.NoActionBar">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
 
 
@@ -52,9 +54,13 @@
             android:name=".SignUpActivity"
             android:label="@string/title_activity_sign_up"
             android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name=".OrderActivity">
 
+        <activity
+            android:name=".OrderActivity"
+            android:label="@string/Order_Activity"
+            android:theme="@style/AppTheme.NoActionBar">
         </activity>
+
         <activity
             android:name=".PayBillActivity"
             android:theme="@style/AppTheme.NoActionBar"></activity>
